compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__highlight_type_alias.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 811
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub type Option(a) = Result(a, Nil)


---- TYPES

--- Option
<pre><code><span class="hljs-keyword">pub type </span><span class="hljs-title">Option</span>(<span class="hljs-variable">a</span>) =
  <span class="hljs-title">Result</span>(<span class="hljs-variable">a</span>, <span class="hljs-title">Nil</span>)</code></pre>
