compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__internal_type_reexport_in_different_module.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1082
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- other.gleam
@internal pub type Internal

-- main.gleam

import other

pub type External =
  other.Internal


---- TYPES

--- External
<pre><code>pub type External =
  @internal Internal</code></pre>
