compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__internal_type_reexport_in_same_module.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1068
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

@internal
pub type Internal

pub type External =
  Internal


---- TYPES

--- External
<pre><code>pub type External =
  @internal Internal</code></pre>
