compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__internal_type_reexport_in_same_module_as_parameter.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1041
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

@internal
pub type Internal

pub type External =
  List(Internal)


---- TYPES

--- External
<pre><code>pub type External =
  List(@internal Internal)</code></pre>
