compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__link_to_type_in_different_module.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 900
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- gleam/dict.gleam
pub type Dict(a, b)

-- main.gleam

import gleam/dict

pub fn make_dict() -> dict.Dict(a, b) { todo }


---- VALUES

--- make_dict
<pre><code>pub fn make_dict() -> <a href="gleam/dict.html#Dict" title="gleam/dict.{type Dict}">dict.Dict</a>(a, b)</code></pre>
