compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__link_to_type_in_different_module_from_nested_module.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 913
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- gleam/dict.gleam
pub type Dict(a, b)

-- gleam/dynamic/decode.gleam

import gleam/dict

pub fn decode_dict() -> dict.Dict(a, b) { todo }


---- VALUES

--- decode_dict
<pre><code>pub fn decode_dict() -> <a href="../dict.html#Dict" title="gleam/dict.{type Dict}">dict.Dict</a>(a, b)</code></pre>
