compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__link_to_type_in_same_module.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 887
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub type Dict(a, b)

pub fn new() -> Dict(a, b) { todo }


---- TYPES

--- Dict
<pre><code>pub type Dict(a, b)</code></pre>

---- VALUES

--- new
<pre><code>pub fn new() -> <a href="#Dict">Dict</a>(a, b)</code></pre>
