compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__long_function_with_no_arguments_parentheses_are_not_split.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1229
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub fn aaaaaaaaaaaaaaaaaaaaaaaaaaaa() -> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa {
  todo
}


---- VALUES

--- aaaaaaaaaaaaaaaaaaaaaaaaaaaa
<pre><code>pub fn aaaaaaaaaaaaaaaaaaaaaaaaaaaa() -> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</code></pre>
