compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__no_link_to_type_in_git_dependency.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 955
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- gleam/dict.gleam
pub type Dict(a, b)

-- main.gleam

import gleam/dict

pub fn make_dict() -> dict.Dict(a, b) { todo }


---- VALUES

--- make_dict
<pre><code>pub fn make_dict() -> <span title="gleam/dict.{type Dict}">dict.Dict</span>(a, b)</code></pre>
